--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
   "engines": {
     "node": ">=4.2"
   },
+  "scripts": {
+    "start": "gulp run",
+    "create-package": "gulp create-package"
+  },
   "repository": "https://github.com/ExLibrisGroup/primo-explore-devenv"
 }
